--- a/Stocks_Spark/Stocks.ipynb
+++ b/Stocks_Spark/Stocks.ipynb
@@ -12,7 +12,7 @@
     "We add this result in a new column (named as each specific stock) and drop the rest of the columns.\n",
     "We join the new columns to the dataframe 'stocks'. \n",
     "\n",
-    "Finally we **load** the dataframe as a parquet file partitioning by year and month."
+    "Finally we **load** the dataframe as a parquet file partitioning it by year and month."
    ]
   },
   {
