--- a/Notebook/stocks.ipynb
+++ b/Notebook/stocks.ipynb
@@ -21,15 +21,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime\n",
     "from pyspark.context import SparkContext\n",
     "from pyspark.sql.session import SparkSession\n",
     "from pyspark.sql.functions import *\n",
     "from glob import glob, os\n",
-    "import pyarrow.parquet as pq\n",
-    "from pyspark.sql.types import StringType, IntegerType, StructType, StructField, TimestampType\n",
+    "from pyspark.sql.types import StructType, StructField, TimestampType\n",
     "from pyspark.sql import SQLContext\n",
-    "from pyspark.sql.functions import to_timestamp\n",
     "\n",
     "\n",
     "sc = SparkContext.getOrCreate()\n",
