--- a/notebooks/comparative_shipments.ipynb
+++ b/notebooks/comparative_shipments.ipynb
@@ -258,7 +258,7 @@
     "    line = float(line[0])\n",
     "    toneladas_resto_2020.append(line)\n",
     "\n",
-    "resto = (toneladas_resto_2019,toneladas_resto_2020,'resto de productos')\n",
+    "resto = (toneladas_resto_2019,toneladas_resto_2020,'otros productos')\n",
     "\n",
     "grafico_comparacion_por_año(*resto)"
    ]
