--- a/notebooks/stocks.ipynb
+++ b/notebooks/stocks.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Calculating daily price variations in stocks using Apache Spark\n",
     "\n",
-    "We **extract** the csv files downloaded from \"https://www.kaggle.com/jacksoncrow/stock-market-dataset\". (In this example we use a folder conteining only 10 files\n",
+    "We **extract** the csv files downloaded from \"https://www.kaggle.com/jacksoncrow/stock-market-dataset\". (In this example we use a folder conteining only 10) files\n",
     "\n",
     "Then we **transform** the data calculting the daily variation by subtracting the closing price from the opening price of each stock. \n",
     "We add this result in a new column (named as each specific stock and drop the rest of the columns.\n",
