--- a/notebooks/stocks.ipynb
+++ b/notebooks/stocks.ipynb
@@ -6,31 +6,27 @@
    "source": [
     "# Calculating daily price variations in stocks using Apache Spark\n",
     "\n",
-    "We **extract** the csv files downloaded from \"https://www.kaggle.com/jacksoncrow/stock-market-dataset\". (In this example we use a folder conteining only 10 files)\n",
+    "We **extract** the csv files downloaded from \"https://www.kaggle.com/jacksoncrow/stock-market-dataset\". (In this example we only use 10 files to keep the running of the script short. The folder containing this example it's call 'stocks10'.)\n",
     "\n",
-    "Then we **transform** the data calculting the daily variation by subtracting the closing price from the opening price of each stock. \n",
-    "We add this result in a new column (named as each specific stock and drop the rest of the columns.\n",
+    "Then we **transform** the data calculting the daily variation by subtracting the opening price from the closing price of each stock. \n",
+    "We add this result in a new column (named as each specific stock and drop the rest of the columns)\n",
     "We join the new columns to the dataframe 'stocks'. \n",
     "\n",
-    "Finally we **load** the dataframe as a parquet file partitioning by year and month."
+    "Finally we **load** the dataframe as a parquet file partitioning it by year and month."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime\n",
     "from pyspark.context import SparkContext\n",
     "from pyspark.sql.session import SparkSession\n",
-    "from pyspark.sql.functions import *\n",
-    "from glob import glob, os\n",
-    "import pyarrow.parquet as pq\n",
-    "from pyspark.sql.types import StringType, IntegerType, StructType, StructField, TimestampType\n",
     "from pyspark.sql import SQLContext\n",
-    "from pyspark.sql.functions import to_timestamp\n",
-    "\n",
+    "from pyspark.sql.functions import col\n",
+    "from glob import glob, os\n",
+    "from pyspark.sql.types import StructType, StructField, TimestampType\n",
     "\n",
     "sc = SparkContext.getOrCreate()\n",
     "spark = SparkSession(sc)\n",
@@ -41,17 +37,17 @@
     "stocks = sqlContext.createDataFrame(spark.sparkContext.emptyRDD(), schema)\n",
     "\n",
     "#Extract\n",
-    "path = '/home/jovyan/archive/stocks1/'\n",
+    "path = '/home/jovyan/stocks10/'\n",
     "for file in sorted(glob(os.path.join(path, '*.csv'))):\n",
     "    file = file.split('/')\n",
     "    file = file[-1]\n",
     "\n",
-    "    df = spark.read.format('csv').option('header', True).load(f'/home/jovyan/archive/stocks1/{file}')\n",
+    "    df = spark.read.format('csv').option('header', True).load(f'/home/jovyan/stocks10/{file}')\n",
     "    file = file.split('.')\n",
     "    stock_name = file[-2]\n",
     "    \n",
     "#Transform\n",
-    "    df = df.withColumn(f'{stock_name}', (df['Open'] - df['Close'])/ df['Open'])\n",
+    "    df = df.withColumn(f'{stock_name}', (df['Close'] - df['Open'])/ df['Open'])\n",
     "    df = df.drop('High', 'Low', 'Adj Close', 'Volume', 'Open', 'Close')\n",
     "    stocks = stocks.join(df, on= 'Date', how = 'fullouter')\n",
     "\n",
