--- a/notebooks/stocks.ipynb
+++ b/notebooks/stocks.ipynb
@@ -24,7 +24,7 @@
     "from pyspark.context import SparkContext\n",
     "from pyspark.sql.session import SparkSession\n",
     "from pyspark.sql import SQLContext\n",
-    "from pyspark.sql.functions import col\n",
+    "from pyspark.sql.functions import *\n",
     "from glob import glob, os\n",
     "from pyspark.sql.types import StructType, StructField, TimestampType\n",
     "\n",
